Fixed #26 - Make footer width dynamic on mobile view

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1724,9 +1724,17 @@ span[style*="font-size"] {
 }
 .footer .footer-left {
   width: 840px;
+  margin-right: 25px;
+}
+@media screen and (max-width: 480px) {
+  .footer .footer-left {
+    width: auto;
+    margin-right: 0;
+  }
 }
 .footer .footer-right {
-  width: 160px;
+  width: 116px;
+  min-width: 116px;
   text-align: right;
 }
 @media screen and (max-width: 480px) {
